Setup Hilt dependency injection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion buildConfig.targetSdkVersion
@@ -21,6 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -28,6 +34,11 @@ dependencies {
     implementation deps.androidX.ktxCore
     implementation deps.androidX.appCompat
     implementation deps.androidX.constraintLayout
+
+    implementation deps.hilt.android.lib
+    kapt deps.hilt.android.compiler
+    implementation deps.hilt.jetpack.viewModel
+    kapt deps.hilt.jetpack.compiler
 
     testImplementation deps.junit
 }
