--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath gradlePlugins.android
         classpath gradlePlugins.kotlin
+        classpath gradlePlugins.hilt
     }
 }
 
