--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,6 +9,8 @@ ext.versions = [
     androidKtxCore          : '1.3.2',
     androidXAppCompat       : '1.2.0',
     androidXConstraintLayout: '2.0.1',
+    hilt                    : '2.28-alpha',
+    hiltJetpack             : '1.0.0-alpha01',
     kotlin                  : '1.4.10',
     junit                   : '4.13',
 ]
@@ -17,6 +19,7 @@ ext.versions = [
 ext.gradlePlugins = [
     android: "com.android.tools.build:gradle:$versions.androidPlugin",
     kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
+    hilt   : "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt"
 ]
 
 ext.deps = [
@@ -24,6 +27,16 @@ ext.deps = [
         appCompat       : "androidx.appcompat:appcompat:$versions.androidXAppCompat",
         constraintLayout: "androidx.constraintlayout:constraintlayout:$versions.androidXConstraintLayout",
         ktxCore         : "androidx.core:core-ktx:$versions.androidKtxCore"
+    ],
+    hilt    : [
+        android: [
+            lib     : "com.google.dagger:hilt-android:$versions.hilt",
+            compiler: "com.google.dagger:hilt-android-compiler:$versions.hilt",
+        ],
+        jetpack: [
+            viewModel: "androidx.hilt:hilt-lifecycle-viewmodel:$versions.hiltJetpack",
+            compiler : "androidx.hilt:hilt-compiler:$versions.hiltJetpack",
+        ]
     ],
     kotlin  : [
         stdlib: "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
