--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 android {
     compileSdkVersion buildConfig.targetSdkVersion
@@ -27,6 +28,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -34,6 +43,12 @@ dependencies {
     implementation deps.androidX.ktxCore
     implementation deps.androidX.appCompat
     implementation deps.androidX.constraintLayout
+    implementation deps.androidX.lifecycle.extensions
+    implementation deps.androidX.lifecycle.viewModel
+    implementation deps.androidX.lifecycle.liveData
+
+    implementation deps.androidX.navigation.fragment
+    implementation deps.androidX.navigation.navigationUi
 
     implementation deps.hilt.android.lib
     kapt deps.hilt.android.compiler
