--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         classpath gradlePlugins.android
         classpath gradlePlugins.kotlin
         classpath gradlePlugins.hilt
+        classpath gradlePlugins.navigationSafeArgs
     }
 }
 
