--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,24 +9,36 @@ ext.versions = [
     androidKtxCore          : '1.3.2',
     androidXAppCompat       : '1.2.0',
     androidXConstraintLayout: '2.0.1',
+    androidXLifecycle       : '2.2.0',
     hilt                    : '2.28-alpha',
     hiltJetpack             : '1.0.0-alpha01',
     kotlin                  : '1.4.10',
+    navigation              : "2.3.0",
     junit                   : '4.13',
 ]
 
 
 ext.gradlePlugins = [
-    android: "com.android.tools.build:gradle:$versions.androidPlugin",
-    kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
-    hilt   : "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt"
+    android           : "com.android.tools.build:gradle:$versions.androidPlugin",
+    kotlin            : "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin",
+    hilt              : "com.google.dagger:hilt-android-gradle-plugin:$versions.hilt",
+    navigationSafeArgs: "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.navigation"
 ]
 
 ext.deps = [
     androidX: [
         appCompat       : "androidx.appcompat:appcompat:$versions.androidXAppCompat",
         constraintLayout: "androidx.constraintlayout:constraintlayout:$versions.androidXConstraintLayout",
-        ktxCore         : "androidx.core:core-ktx:$versions.androidKtxCore"
+        ktxCore         : "androidx.core:core-ktx:$versions.androidKtxCore",
+        lifecycle       : [
+            extensions: "androidx.lifecycle:lifecycle-extensions:$versions.androidXLifecycle",
+            viewModel : "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.androidXLifecycle",
+            liveData  : "androidx.lifecycle:lifecycle-livedata-ktx:$versions.androidXLifecycle",
+        ],
+        navigation      : [
+            fragment    : "androidx.navigation:navigation-fragment-ktx:$versions.navigation",
+            navigationUi: "androidx.navigation:navigation-ui-ktx:$versions.navigation"
+        ],
     ],
     hilt    : [
         android: [
