--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -10,10 +10,16 @@ ext.versions = [
     androidXAppCompat       : '1.2.0',
     androidXConstraintLayout: '2.0.1',
     androidXLifecycle       : '2.2.0',
+    androidXCoreTesting     : "2.1.0",
+    coroutines              : "1.3.9",
+    desugaring              : "1.0.9",
     hilt                    : '2.28-alpha',
     hiltJetpack             : '1.0.0-alpha01',
     kotlin                  : '1.4.10',
+    kotest                  : '4.2.6',
+    mockk                   : "1.10.2",
     navigation              : "2.3.0",
+    paging                  : "3.0.0-alpha07",
     junit                   : '4.13',
 ]
 
@@ -26,7 +32,7 @@ ext.gradlePlugins = [
 ]
 
 ext.deps = [
-    androidX: [
+    androidX            : [
         appCompat       : "androidx.appcompat:appcompat:$versions.androidXAppCompat",
         constraintLayout: "androidx.constraintlayout:constraintlayout:$versions.androidXConstraintLayout",
         ktxCore         : "androidx.core:core-ktx:$versions.androidKtxCore",
@@ -39,8 +45,11 @@ ext.deps = [
             fragment    : "androidx.navigation:navigation-fragment-ktx:$versions.navigation",
             navigationUi: "androidx.navigation:navigation-ui-ktx:$versions.navigation"
         ],
+        paging          : "androidx.paging:paging-runtime:$versions.paging",
+        archCoreTesting : "androidx.arch.core:core-testing:$versions.androidXCoreTesting",
     ],
-    hilt    : [
+    desugaring          : "com.android.tools:desugar_jdk_libs:$versions.desugaring",
+    hilt                : [
         android: [
             lib     : "com.google.dagger:hilt-android:$versions.hilt",
             compiler: "com.google.dagger:hilt-android-compiler:$versions.hilt",
@@ -50,8 +59,15 @@ ext.deps = [
             compiler : "androidx.hilt:hilt-compiler:$versions.hiltJetpack",
         ]
     ],
-    kotlin  : [
-        stdlib: "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
+    kotlin              : [
+        stdlib    : "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin",
+        coroutines: [
+            core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines",
+            android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines",
+            test   : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutines",
+        ],
     ],
-    junit   : "junit:junit:$versions.junit",
+    kotlinTestAssertions: "io.kotest:kotest-assertions-core:$versions.kotest",
+    junit               : "junit:junit:$versions.junit",
+    mockk               : "io.mockk:mockk:$versions.mockk",
 ]
