Connect fetching currency rates with the backend

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,6 +18,9 @@ ext.versions = [
     kotlin                  : '1.4.10',
     kotest                  : '4.2.6',
     mockk                   : "1.10.2",
+    retrofit                : '2.9.0',
+    moshi                   : '1.11.0',
+    okHttpInterceptor       : '3.14.0',
     navigation              : "2.3.0",
     paging                  : "3.0.0-alpha07",
     junit                   : '4.13',
@@ -67,6 +70,11 @@ ext.deps = [
             test   : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutines",
         ],
     ],
+    retrofit            : "com.squareup.retrofit2:retrofit:$versions.retrofit",
+    retrofitMoshi       : "com.squareup.retrofit2:converter-moshi:$versions.retrofit",
+    moshi               : "com.squareup.moshi:moshi:$versions.moshi",
+    moshiKotlinCodegen  : "com.squareup.moshi:moshi-kotlin-codegen:$versions.moshi",
+    okHttpIntereptor    : "com.squareup.okhttp3:logging-interceptor:$versions.okHttpInterceptor",
     kotlinTestAssertions: "io.kotest:kotest-assertions-core:$versions.kotest",
     junit               : "junit:junit:$versions.junit",
     mockk               : "io.mockk:mockk:$versions.mockk",
