--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,10 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
